--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,9 @@
     <listener>
         <listener-class>com.epam.ad.listener.SessionListener</listener-class>
     </listener>
-
+    <listener>
+        <listener-class>com.epam.ad.listener.ContextListener</listener-class>
+    </listener>
     <!--<filter>-->
     <!--<filter-name>SecurityFilter</filter-name>-->
     <!--<filter-class>com.epam.am.filter.SecurityFilter</filter-class>-->
