--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
@@ -52,11 +52,17 @@
     <listener>
         <listener-class>com.epam.ad.listener.ContextListener</listener-class>
     </listener>
-    <!--<filter>-->
-    <!--<filter-name>SecurityFilter</filter-name>-->
-    <!--<filter-class>com.epam.am.filter.SecurityFilter</filter-class>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.epam.ad.filter.SecurityFilter</filter-class>
 
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/do/*</url-pattern>
+        <dispatcher>FORWARD</dispatcher>
+
+    </filter-mapping>
     <error-page>
         <location>/error</location>
     </error-page>
