--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,7 @@
 
     </filter-mapping>
     <error-page>
+        <exception-type></exception-type>
         <location>/error</location>
     </error-page>
 
